Update to allow for long pollution source descriptions, issue #116. I had missed out adding the measuresSummary statement from the profile where it is provided. In some bathing waters, this makes the pollution sources statement too long to fit in the space available. The agreed solution is to:
- swap the location of the sampling point map and the web-info (QR code)
sections
- in the case of a very long pollution sources statement, hide the map
and allow the content to flow into the space used by the map.

The correct way to solve this would be to use CSS grid, but this is too
much change this close to launch. Instead, we fake it by tweaking the
CSS classes. The downside of this is that we have to lose the grey
border around the pollution sources statement, in the case that it's
very long.

We should come back in the future and revise this to use CSS grid
properly.

--- a/app/assets/stylesheets/_sign-layout.scss
+++ b/app/assets/stylesheets/_sign-layout.scss
@@ -149,6 +149,10 @@ $rowHeightFoot: 100% - ($rowHeightHead + $rowHeightAbout + $rowHeightInfo);
 .o-content-unit__1-2 { margin-right: 0.5em; }
 .o-content-unit__2-2 { margin-left: 0.5em; }
 
+.o-content-unit__2-2.o-content-unit__right-column {
+  margin-left: 51%;
+}
+
 /** row of three blocks */
 .o-content-unit__1-3, .o-content-unit__3-3 {
   max-height: 100%;
@@ -368,6 +372,10 @@ $rowHeightFoot: 100% - ($rowHeightHead + $rowHeightAbout + $rowHeightInfo);
 
 .u-long-text p {
   font-size: 85%;
+}
+
+.u-very-long-text {
+  border: 0;
 }
 
 // GDS stylesheet fix
